--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="J:/Jars/gop.jar"/>
+	<classpathentry kind="lib" path="res"/>
+	<classpathentry kind="lib" path="res/gop.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
